# ot-harjoitustyo

./: .README.md.swp  .gitignore  .pylintrc  README.md  data.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  käyttöohje.md  testausdokumentti  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: README.md
harjoitustyo/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: data.txt  user.py  userdata.py
laskarit/viikko1/: .komentorivi.txt.swp  gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  src_tests___init___py.html  src_tests_maksukortti_test_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: data.db  index.py  initialize_database.py  pyproject.toml  userdata.py
src/collectinggame/: coin.py  coincollector.py  collector.py  window.py
src/data/: data.db
src/entities/: exercise.py  user.py
src/repositories/: exercise_repository.py  user_repository.py  userdata.py
src/services/: service.py
src/tests/: coincollector_test.py  conftest.py  exerciserepository_test.py  service_test.py  userdata_test.py  userrepository_test.py
src/ui/: create_user_view.py  exercise_view.py  login_view.py  main_view.py  ui.py
