[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Sippee <sippegaming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
invoke = "^1.6.0"
db-sqlite3 = "^0.0.1"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
