[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sippee <sippegaming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
db-sqlite3 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
